// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Events /> Renders Eventspage unchanged 1`] = `
.emotion-180 {
  margin-top: -0.5em;
  background: #000000;
  padding-top: 1px;
  position: relative;
  z-index: 3;
}

.emotion-180 h3 {
  margin: 0;
}

.emotion-178 {
  max-width: 1255px;
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  padding-left: 30px;
  padding-right: 30px;
  padding-bottom: 64px;
}

@media (max-width:29.375em) {
  .emotion-178 {
    padding-left: 16px;
    padding-right: 16px;
  }
}

.emotion-178 ul {
  -webkit-transform: translateY(-70px);
  -ms-transform: translateY(-70px);
  transform: translateY(-70px);
}

@media (max-width:48em) {
  .emotion-178 ul {
    -webkit-transform: translateY(-90px);
    -ms-transform: translateY(-90px);
    transform: translateY(-90px);
  }
}

.emotion-178 ul + div {
  margin-top: -40px;
  padding-top: 1rem;
  min-height: 300px;
}

@media (max-width:48em) {
  .emotion-178 ul + div {
    margin-top: -80px;
  }
}

@media (max-width:48em) {
  .emotion-178 {
    padding: 0 12px 67px;
  }
}

.emotion-8 {
  list-style-type: none;
  padding: 0;
}

@media (max-width:48em) {
  .emotion-8 li a {
    margin-right: 16px;
  }

  .emotion-8:first-of-type a {
    margin-left: 10px;
  }
}

.emotion-2 {
  display: inline-block;
}

.emotion-2:last-of-type a {
  margin-right: 0;
}

.emotion-0 {
  color: #ffffff;
  cursor: pointer;
  display: inline-block;
  font-family: Inter,sans-serif;
  font-size: 21px;
  font-weight: 400;
  line-height: 28px;
  -webkit-letter-spacing: -0.1465116px;
  -moz-letter-spacing: -0.1465116px;
  -ms-letter-spacing: -0.1465116px;
  letter-spacing: -0.1465116px;
  margin-right: 40px;
  padding-bottom: 2px;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: solid 2px transparent;
  -webkit-transition: all 0.3s ease-in;
  transition: all 0.3s ease-in;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: solid 2px #2891ff;
}

li:last-child > .emotion-0 {
  padding-right: 0;
}

@media (max-width:48em) {
  .emotion-0 {
    font-size: 18px;
    line-height: 21px;
    -webkit-letter-spacing: -0.1116279px;
    -moz-letter-spacing: -0.1116279px;
    -ms-letter-spacing: -0.1116279px;
    letter-spacing: -0.1116279px;
    opacity: 0.6;
  }

  .emotion-0:hover {
    opacity: 1;
  }
}

@media (max-width:29.125em) {
  .emotion-0 {
    font-size: 16px;
  }
}

@media (max-width:22.5em) {
  .emotion-0 {
    font-size: 14px;
  }
}

.emotion-0 {
  opacity: 1;
  border-bottom: 2px solid #2891ff;
  font-weight: 600;
}

.emotion-4 {
  color: #ffffff;
  cursor: pointer;
  display: inline-block;
  font-family: Inter,sans-serif;
  font-size: 21px;
  font-weight: 400;
  line-height: 28px;
  -webkit-letter-spacing: -0.1465116px;
  -moz-letter-spacing: -0.1465116px;
  -ms-letter-spacing: -0.1465116px;
  letter-spacing: -0.1465116px;
  margin-right: 40px;
  padding-bottom: 2px;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: solid 2px transparent;
  -webkit-transition: all 0.3s ease-in;
  transition: all 0.3s ease-in;
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: solid 2px #ffffff;
}

li:last-child > .emotion-4 {
  padding-right: 0;
}

@media (max-width:48em) {
  .emotion-4 {
    font-size: 18px;
    line-height: 21px;
    -webkit-letter-spacing: -0.1116279px;
    -moz-letter-spacing: -0.1116279px;
    -ms-letter-spacing: -0.1116279px;
    letter-spacing: -0.1116279px;
    opacity: 0.6;
  }

  .emotion-4:hover {
    opacity: 1;
  }
}

@media (max-width:29.125em) {
  .emotion-4 {
    font-size: 16px;
  }
}

@media (max-width:22.5em) {
  .emotion-4 {
    font-size: 14px;
  }
}

.emotion-172 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

@media (max-width:78.25em) {
  .emotion-172 {
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

.emotion-170 {
  display: grid;
  grid-template-columns: repeat(5,1fr);
  grid-gap: 18px;
  margin-bottom: 2rem;
}

@media (max-width:60em) {
  .emotion-170 {
    grid-template-columns: repeat(3,1fr);
  }
}

@media (max-width:48em) {
  .emotion-170 {
    grid-template-columns: repeat(2,1fr);
  }
}

.emotion-24 {
  background-clip: border-box;
  background-color: #272727;
  border: none;
  border-radius: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 274px;
  position: relative;
  width: 100%;
  word-wrap: break-word;
}

.emotion-24 button {
  color: #ffffff;
}

.emotion-10 {
  width: 100%;
  height: 137px;
  border-top-left-radius: 0.5rem;
  border-top-right-radius: 0.5rem;
  object-fit: cover;
}

.emotion-22 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 12px 12px 14px;
  text-align: center;
}

.emotion-22 button {
  margin-top: 7px;
}

.emotion-12 {
  display: block;
  color: #ffffff;
  font-family: DINAlternateBold,sans-serif;
  line-height: 21px;
  font-size: 16px;
  margin-top: 0;
  margin-bottom: 6px;
  -webkit-letter-spacing: -0.1px;
  -moz-letter-spacing: -0.1px;
  -ms-letter-spacing: -0.1px;
  letter-spacing: -0.1px;
  text-overflow: ellipsis;
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}

.emotion-14 {
  display: block;
  font-weight: 500;
  margin-bottom: 3.5px;
  font-family: DINAlternateRegular,sans-serif;
  color: #ffffff;
  font-size: 11px;
  -webkit-letter-spacing: -0.1px;
  -moz-letter-spacing: -0.1px;
  -ms-letter-spacing: -0.1px;
  letter-spacing: -0.1px;
  line-height: 15px;
  opacity: 0.7;
}

.emotion-16 {
  display: block;
  font-weight: 500;
  margin-bottom: 3.5px;
  font-family: DINAlternateRegular,sans-serif;
  color: #ffffff;
  font-size: 11px;
  -webkit-letter-spacing: -0.1px;
  -moz-letter-spacing: -0.1px;
  -ms-letter-spacing: -0.1px;
  letter-spacing: -0.1px;
  line-height: 15px;
  opacity: 0.6;
}

.emotion-18 {
  color: #ffffff;
  font-size: 20px;
  font-weight: 300;
  line-height: 27px;
  -webkit-letter-spacing: -0.14px;
  -moz-letter-spacing: -0.14px;
  -ms-letter-spacing: -0.14px;
  letter-spacing: -0.14px;
  margin: 0;
}

.emotion-18 span {
  display: block;
  font-weight: 500;
  margin-bottom: 3.5px;
  font-family: DINAlternateRegular,sans-serif;
  display: inline-block;
  font-size: 8px;
  -webkit-letter-spacing: -0.05px;
  -moz-letter-spacing: -0.05px;
  -ms-letter-spacing: -0.05px;
  letter-spacing: -0.05px;
  line-height: 9px;
  opacity: 0.9;
  -webkit-transform: translateY(-7px);
  -ms-transform: translateY(-7px);
  transform: translateY(-7px);
}

.emotion-20 {
  border: solid 2px #2891ff;
  color: #2891ff;
  background: transparent;
  height: 27px;
  -webkit-letter-spacing: -0.08px;
  -moz-letter-spacing: -0.08px;
  -ms-letter-spacing: -0.08px;
  letter-spacing: -0.08px;
  font-size: 12px;
  font-weight: 500;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.3s ease-in;
  transition: all 0.3s ease-in;
  cursor: pointer;
  font-family: Inter,sans-serif;
  border-radius: 25px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 103px;
}

.emotion-20:hover {
  border-color: #2891ff;
  background: #2891ff;
  color: #ffffff;
}

.emotion-20 svg {
  margin-right: 6px;
}

.emotion-20:hover path {
  stroke: #000000;
}

.emotion-176 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-174 {
  color: #ffffff;
  font-size: 14px;
  font-weight: 500;
  -webkit-letter-spacing: -0.1px;
  -moz-letter-spacing: -0.1px;
  -ms-letter-spacing: -0.1px;
  letter-spacing: -0.1px;
  margin: 0;
  position: relative;
  cursor: pointer;
}

.emotion-174:before {
  display: block;
  content: '';
  position: absolute;
  width: 0;
  height: 0;
  border: solid 6px transparent;
  border-top-color: #ffffff;
  right: -22px;
  top: 6px;
  border-top-width: 8px;
}

<div>
  <div
    class="emotion-180 emotion-181"
  >
    <div
      class="emotion-178 emotion-179"
    >
      <ul
        class="emotion-8 emotion-9"
      >
        <li
          class="emotion-2 emotion-3"
        >
          <a
            class="emotion-0 emotion-1"
          >
            Popular
          </a>
        </li>
        <li
          class="emotion-2 emotion-3"
        >
          <a
            class="emotion-4 emotion-1"
          >
            Experiences
          </a>
        </li>
      </ul>
      <div
        class="emotion-172 emotion-173"
      >
        <div
          class="emotion-170 emotion-171"
        >
          <div
            aria-label="card"
            class="emotion-24 emotion-25"
          >
            <img
              class="emotion-10 emotion-11"
              src="https://sportswhereiam.com/wp-content/uploads/2015/06/Minute-Maid-Park.jpg"
            />
            <div
              class="emotion-22 emotion-23"
            >
              <h1
                class="emotion-12 emotion-13"
              >
                Houston Astros vs. Seattle Mariners 0 - popular
              </h1>
              <span
                class="emotion-14 emotion-15"
              >
                2 Aug 2020
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                Houston, US
              </span>
              <p
                class="emotion-18 emotion-19"
              >
                <span>
                  From
                </span>
                 $
                10
              </p>
              <button
                class="emotion-20 emotion-21"
              >
                Get Tickets
              </button>
            </div>
          </div>
          <div
            aria-label="card"
            class="emotion-24 emotion-25"
          >
            <img
              class="emotion-10 emotion-11"
              src="https://sportswhereiam.com/wp-content/uploads/2015/06/Minute-Maid-Park.jpg"
            />
            <div
              class="emotion-22 emotion-23"
            >
              <h1
                class="emotion-12 emotion-13"
              >
                Houston Astros vs. Seattle Mariners 1 - popular
              </h1>
              <span
                class="emotion-14 emotion-15"
              >
                2 Aug 2020
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                Houston, US
              </span>
              <p
                class="emotion-18 emotion-19"
              >
                <span>
                  From
                </span>
                 $
                10
              </p>
              <button
                class="emotion-20 emotion-21"
              >
                Get Tickets
              </button>
            </div>
          </div>
          <div
            aria-label="card"
            class="emotion-24 emotion-25"
          >
            <img
              class="emotion-10 emotion-11"
              src="https://sportswhereiam.com/wp-content/uploads/2015/06/Minute-Maid-Park.jpg"
            />
            <div
              class="emotion-22 emotion-23"
            >
              <h1
                class="emotion-12 emotion-13"
              >
                Houston Astros vs. Seattle Mariners 2 - popular
              </h1>
              <span
                class="emotion-14 emotion-15"
              >
                2 Aug 2020
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                Houston, US
              </span>
              <p
                class="emotion-18 emotion-19"
              >
                <span>
                  From
                </span>
                 $
                10
              </p>
              <button
                class="emotion-20 emotion-21"
              >
                Get Tickets
              </button>
            </div>
          </div>
          <div
            aria-label="card"
            class="emotion-24 emotion-25"
          >
            <img
              class="emotion-10 emotion-11"
              src="https://sportswhereiam.com/wp-content/uploads/2015/06/Minute-Maid-Park.jpg"
            />
            <div
              class="emotion-22 emotion-23"
            >
              <h1
                class="emotion-12 emotion-13"
              >
                Houston Astros vs. Seattle Mariners 3 - popular
              </h1>
              <span
                class="emotion-14 emotion-15"
              >
                2 Aug 2020
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                Houston, US
              </span>
              <p
                class="emotion-18 emotion-19"
              >
                <span>
                  From
                </span>
                 $
                10
              </p>
              <button
                class="emotion-20 emotion-21"
              >
                Get Tickets
              </button>
            </div>
          </div>
          <div
            aria-label="card"
            class="emotion-24 emotion-25"
          >
            <img
              class="emotion-10 emotion-11"
              src="https://sportswhereiam.com/wp-content/uploads/2015/06/Minute-Maid-Park.jpg"
            />
            <div
              class="emotion-22 emotion-23"
            >
              <h1
                class="emotion-12 emotion-13"
              >
                Houston Astros vs. Seattle Mariners 4 - popular
              </h1>
              <span
                class="emotion-14 emotion-15"
              >
                2 Aug 2020
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                Houston, US
              </span>
              <p
                class="emotion-18 emotion-19"
              >
                <span>
                  From
                </span>
                 $
                10
              </p>
              <button
                class="emotion-20 emotion-21"
              >
                Get Tickets
              </button>
            </div>
          </div>
          <div
            aria-label="card"
            class="emotion-24 emotion-25"
          >
            <img
              class="emotion-10 emotion-11"
              src="https://sportswhereiam.com/wp-content/uploads/2015/06/Minute-Maid-Park.jpg"
            />
            <div
              class="emotion-22 emotion-23"
            >
              <h1
                class="emotion-12 emotion-13"
              >
                Houston Astros vs. Seattle Mariners 5 - popular
              </h1>
              <span
                class="emotion-14 emotion-15"
              >
                2 Aug 2020
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                Houston, US
              </span>
              <p
                class="emotion-18 emotion-19"
              >
                <span>
                  From
                </span>
                 $
                10
              </p>
              <button
                class="emotion-20 emotion-21"
              >
                Get Tickets
              </button>
            </div>
          </div>
          <div
            aria-label="card"
            class="emotion-24 emotion-25"
          >
            <img
              class="emotion-10 emotion-11"
              src="https://sportswhereiam.com/wp-content/uploads/2015/06/Minute-Maid-Park.jpg"
            />
            <div
              class="emotion-22 emotion-23"
            >
              <h1
                class="emotion-12 emotion-13"
              >
                Houston Astros vs. Seattle Mariners 6 - popular
              </h1>
              <span
                class="emotion-14 emotion-15"
              >
                2 Aug 2020
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                Houston, US
              </span>
              <p
                class="emotion-18 emotion-19"
              >
                <span>
                  From
                </span>
                 $
                10
              </p>
              <button
                class="emotion-20 emotion-21"
              >
                Get Tickets
              </button>
            </div>
          </div>
          <div
            aria-label="card"
            class="emotion-24 emotion-25"
          >
            <img
              class="emotion-10 emotion-11"
              src="https://sportswhereiam.com/wp-content/uploads/2015/06/Minute-Maid-Park.jpg"
            />
            <div
              class="emotion-22 emotion-23"
            >
              <h1
                class="emotion-12 emotion-13"
              >
                Houston Astros vs. Seattle Mariners 7 - popular
              </h1>
              <span
                class="emotion-14 emotion-15"
              >
                2 Aug 2020
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                Houston, US
              </span>
              <p
                class="emotion-18 emotion-19"
              >
                <span>
                  From
                </span>
                 $
                10
              </p>
              <button
                class="emotion-20 emotion-21"
              >
                Get Tickets
              </button>
            </div>
          </div>
          <div
            aria-label="card"
            class="emotion-24 emotion-25"
          >
            <img
              class="emotion-10 emotion-11"
              src="https://sportswhereiam.com/wp-content/uploads/2015/06/Minute-Maid-Park.jpg"
            />
            <div
              class="emotion-22 emotion-23"
            >
              <h1
                class="emotion-12 emotion-13"
              >
                Houston Astros vs. Seattle Mariners 8 - popular
              </h1>
              <span
                class="emotion-14 emotion-15"
              >
                2 Aug 2020
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                Houston, US
              </span>
              <p
                class="emotion-18 emotion-19"
              >
                <span>
                  From
                </span>
                 $
                10
              </p>
              <button
                class="emotion-20 emotion-21"
              >
                Get Tickets
              </button>
            </div>
          </div>
          <div
            aria-label="card"
            class="emotion-24 emotion-25"
          >
            <img
              class="emotion-10 emotion-11"
              src="https://sportswhereiam.com/wp-content/uploads/2015/06/Minute-Maid-Park.jpg"
            />
            <div
              class="emotion-22 emotion-23"
            >
              <h1
                class="emotion-12 emotion-13"
              >
                Houston Astros vs. Seattle Mariners 9 - popular
              </h1>
              <span
                class="emotion-14 emotion-15"
              >
                2 Aug 2020
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                Houston, US
              </span>
              <p
                class="emotion-18 emotion-19"
              >
                <span>
                  From
                </span>
                 $
                10
              </p>
              <button
                class="emotion-20 emotion-21"
              >
                Get Tickets
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-label="more tab data"
        class="emotion-176 emotion-177"
      >
        <p
          class="emotion-174 emotion-175"
        >
          More
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Events /> Shows more events when more option is clicked 1`] = `
.emotion-340 {
  margin-top: -0.5em;
  background: #000000;
  padding-top: 1px;
  position: relative;
  z-index: 3;
}

.emotion-340 h3 {
  margin: 0;
}

.emotion-338 {
  max-width: 1255px;
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  padding-left: 30px;
  padding-right: 30px;
  padding-bottom: 64px;
}

@media (max-width:29.375em) {
  .emotion-338 {
    padding-left: 16px;
    padding-right: 16px;
  }
}

.emotion-338 ul {
  -webkit-transform: translateY(-70px);
  -ms-transform: translateY(-70px);
  transform: translateY(-70px);
}

@media (max-width:48em) {
  .emotion-338 ul {
    -webkit-transform: translateY(-90px);
    -ms-transform: translateY(-90px);
    transform: translateY(-90px);
  }
}

.emotion-338 ul + div {
  margin-top: -40px;
  padding-top: 1rem;
  min-height: 300px;
}

@media (max-width:48em) {
  .emotion-338 ul + div {
    margin-top: -80px;
  }
}

@media (max-width:48em) {
  .emotion-338 {
    padding: 0 12px 67px;
  }
}

.emotion-8 {
  list-style-type: none;
  padding: 0;
}

@media (max-width:48em) {
  .emotion-8 li a {
    margin-right: 16px;
  }

  .emotion-8:first-of-type a {
    margin-left: 10px;
  }
}

.emotion-2 {
  display: inline-block;
}

.emotion-2:last-of-type a {
  margin-right: 0;
}

.emotion-0 {
  color: #ffffff;
  cursor: pointer;
  display: inline-block;
  font-family: Inter,sans-serif;
  font-size: 21px;
  font-weight: 400;
  line-height: 28px;
  -webkit-letter-spacing: -0.1465116px;
  -moz-letter-spacing: -0.1465116px;
  -ms-letter-spacing: -0.1465116px;
  letter-spacing: -0.1465116px;
  margin-right: 40px;
  padding-bottom: 2px;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: solid 2px transparent;
  -webkit-transition: all 0.3s ease-in;
  transition: all 0.3s ease-in;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: solid 2px #2891ff;
}

li:last-child > .emotion-0 {
  padding-right: 0;
}

@media (max-width:48em) {
  .emotion-0 {
    font-size: 18px;
    line-height: 21px;
    -webkit-letter-spacing: -0.1116279px;
    -moz-letter-spacing: -0.1116279px;
    -ms-letter-spacing: -0.1116279px;
    letter-spacing: -0.1116279px;
    opacity: 0.6;
  }

  .emotion-0:hover {
    opacity: 1;
  }
}

@media (max-width:29.125em) {
  .emotion-0 {
    font-size: 16px;
  }
}

@media (max-width:22.5em) {
  .emotion-0 {
    font-size: 14px;
  }
}

.emotion-0 {
  opacity: 1;
  border-bottom: 2px solid #2891ff;
  font-weight: 600;
}

.emotion-4 {
  color: #ffffff;
  cursor: pointer;
  display: inline-block;
  font-family: Inter,sans-serif;
  font-size: 21px;
  font-weight: 400;
  line-height: 28px;
  -webkit-letter-spacing: -0.1465116px;
  -moz-letter-spacing: -0.1465116px;
  -ms-letter-spacing: -0.1465116px;
  letter-spacing: -0.1465116px;
  margin-right: 40px;
  padding-bottom: 2px;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: solid 2px transparent;
  -webkit-transition: all 0.3s ease-in;
  transition: all 0.3s ease-in;
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: solid 2px #ffffff;
}

li:last-child > .emotion-4 {
  padding-right: 0;
}

@media (max-width:48em) {
  .emotion-4 {
    font-size: 18px;
    line-height: 21px;
    -webkit-letter-spacing: -0.1116279px;
    -moz-letter-spacing: -0.1116279px;
    -ms-letter-spacing: -0.1116279px;
    letter-spacing: -0.1116279px;
    opacity: 0.6;
  }

  .emotion-4:hover {
    opacity: 1;
  }
}

@media (max-width:29.125em) {
  .emotion-4 {
    font-size: 16px;
  }
}

@media (max-width:22.5em) {
  .emotion-4 {
    font-size: 14px;
  }
}

.emotion-332 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

@media (max-width:78.25em) {
  .emotion-332 {
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

.emotion-330 {
  display: grid;
  grid-template-columns: repeat(5,1fr);
  grid-gap: 18px;
  margin-bottom: 2rem;
}

@media (max-width:60em) {
  .emotion-330 {
    grid-template-columns: repeat(3,1fr);
  }
}

@media (max-width:48em) {
  .emotion-330 {
    grid-template-columns: repeat(2,1fr);
  }
}

.emotion-24 {
  background-clip: border-box;
  background-color: #272727;
  border: none;
  border-radius: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 274px;
  position: relative;
  width: 100%;
  word-wrap: break-word;
}

.emotion-24 button {
  color: #ffffff;
}

.emotion-10 {
  width: 100%;
  height: 137px;
  border-top-left-radius: 0.5rem;
  border-top-right-radius: 0.5rem;
  object-fit: cover;
}

.emotion-22 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 12px 12px 14px;
  text-align: center;
}

.emotion-22 button {
  margin-top: 7px;
}

.emotion-12 {
  display: block;
  color: #ffffff;
  font-family: DINAlternateBold,sans-serif;
  line-height: 21px;
  font-size: 16px;
  margin-top: 0;
  margin-bottom: 6px;
  -webkit-letter-spacing: -0.1px;
  -moz-letter-spacing: -0.1px;
  -ms-letter-spacing: -0.1px;
  letter-spacing: -0.1px;
  text-overflow: ellipsis;
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}

.emotion-14 {
  display: block;
  font-weight: 500;
  margin-bottom: 3.5px;
  font-family: DINAlternateRegular,sans-serif;
  color: #ffffff;
  font-size: 11px;
  -webkit-letter-spacing: -0.1px;
  -moz-letter-spacing: -0.1px;
  -ms-letter-spacing: -0.1px;
  letter-spacing: -0.1px;
  line-height: 15px;
  opacity: 0.7;
}

.emotion-16 {
  display: block;
  font-weight: 500;
  margin-bottom: 3.5px;
  font-family: DINAlternateRegular,sans-serif;
  color: #ffffff;
  font-size: 11px;
  -webkit-letter-spacing: -0.1px;
  -moz-letter-spacing: -0.1px;
  -ms-letter-spacing: -0.1px;
  letter-spacing: -0.1px;
  line-height: 15px;
  opacity: 0.6;
}

.emotion-18 {
  color: #ffffff;
  font-size: 20px;
  font-weight: 300;
  line-height: 27px;
  -webkit-letter-spacing: -0.14px;
  -moz-letter-spacing: -0.14px;
  -ms-letter-spacing: -0.14px;
  letter-spacing: -0.14px;
  margin: 0;
}

.emotion-18 span {
  display: block;
  font-weight: 500;
  margin-bottom: 3.5px;
  font-family: DINAlternateRegular,sans-serif;
  display: inline-block;
  font-size: 8px;
  -webkit-letter-spacing: -0.05px;
  -moz-letter-spacing: -0.05px;
  -ms-letter-spacing: -0.05px;
  letter-spacing: -0.05px;
  line-height: 9px;
  opacity: 0.9;
  -webkit-transform: translateY(-7px);
  -ms-transform: translateY(-7px);
  transform: translateY(-7px);
}

.emotion-20 {
  border: solid 2px #2891ff;
  color: #2891ff;
  background: transparent;
  height: 27px;
  -webkit-letter-spacing: -0.08px;
  -moz-letter-spacing: -0.08px;
  -ms-letter-spacing: -0.08px;
  letter-spacing: -0.08px;
  font-size: 12px;
  font-weight: 500;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.3s ease-in;
  transition: all 0.3s ease-in;
  cursor: pointer;
  font-family: Inter,sans-serif;
  border-radius: 25px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 103px;
}

.emotion-20:hover {
  border-color: #2891ff;
  background: #2891ff;
  color: #ffffff;
}

.emotion-20 svg {
  margin-right: 6px;
}

.emotion-20:hover path {
  stroke: #000000;
}

.emotion-336 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-334 {
  color: #ffffff;
  font-size: 14px;
  font-weight: 500;
  -webkit-letter-spacing: -0.1px;
  -moz-letter-spacing: -0.1px;
  -ms-letter-spacing: -0.1px;
  letter-spacing: -0.1px;
  margin: 0;
  position: relative;
  cursor: pointer;
}

.emotion-334:before {
  display: block;
  content: '';
  position: absolute;
  width: 0;
  height: 0;
  border: solid 6px transparent;
  border-top-color: #ffffff;
  right: -22px;
  top: 6px;
  border-top-width: 8px;
}

<div>
  <div
    class="emotion-340 emotion-341"
  >
    <div
      class="emotion-338 emotion-339"
    >
      <ul
        class="emotion-8 emotion-9"
      >
        <li
          class="emotion-2 emotion-3"
        >
          <a
            class="emotion-0 emotion-1"
          >
            Popular
          </a>
        </li>
        <li
          class="emotion-2 emotion-3"
        >
          <a
            class="emotion-4 emotion-1"
          >
            Experiences
          </a>
        </li>
      </ul>
      <div
        class="emotion-332 emotion-333"
      >
        <div
          class="emotion-330 emotion-331"
        >
          <div
            aria-label="card"
            class="emotion-24 emotion-25"
          >
            <img
              class="emotion-10 emotion-11"
              src="https://sportswhereiam.com/wp-content/uploads/2015/06/Minute-Maid-Park.jpg"
            />
            <div
              class="emotion-22 emotion-23"
            >
              <h1
                class="emotion-12 emotion-13"
              >
                Houston Astros vs. Seattle Mariners 0 - popular
              </h1>
              <span
                class="emotion-14 emotion-15"
              >
                2 Aug 2020
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                Houston, US
              </span>
              <p
                class="emotion-18 emotion-19"
              >
                <span>
                  From
                </span>
                 $
                10
              </p>
              <button
                class="emotion-20 emotion-21"
              >
                Get Tickets
              </button>
            </div>
          </div>
          <div
            aria-label="card"
            class="emotion-24 emotion-25"
          >
            <img
              class="emotion-10 emotion-11"
              src="https://sportswhereiam.com/wp-content/uploads/2015/06/Minute-Maid-Park.jpg"
            />
            <div
              class="emotion-22 emotion-23"
            >
              <h1
                class="emotion-12 emotion-13"
              >
                Houston Astros vs. Seattle Mariners 1 - popular
              </h1>
              <span
                class="emotion-14 emotion-15"
              >
                2 Aug 2020
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                Houston, US
              </span>
              <p
                class="emotion-18 emotion-19"
              >
                <span>
                  From
                </span>
                 $
                10
              </p>
              <button
                class="emotion-20 emotion-21"
              >
                Get Tickets
              </button>
            </div>
          </div>
          <div
            aria-label="card"
            class="emotion-24 emotion-25"
          >
            <img
              class="emotion-10 emotion-11"
              src="https://sportswhereiam.com/wp-content/uploads/2015/06/Minute-Maid-Park.jpg"
            />
            <div
              class="emotion-22 emotion-23"
            >
              <h1
                class="emotion-12 emotion-13"
              >
                Houston Astros vs. Seattle Mariners 2 - popular
              </h1>
              <span
                class="emotion-14 emotion-15"
              >
                2 Aug 2020
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                Houston, US
              </span>
              <p
                class="emotion-18 emotion-19"
              >
                <span>
                  From
                </span>
                 $
                10
              </p>
              <button
                class="emotion-20 emotion-21"
              >
                Get Tickets
              </button>
            </div>
          </div>
          <div
            aria-label="card"
            class="emotion-24 emotion-25"
          >
            <img
              class="emotion-10 emotion-11"
              src="https://sportswhereiam.com/wp-content/uploads/2015/06/Minute-Maid-Park.jpg"
            />
            <div
              class="emotion-22 emotion-23"
            >
              <h1
                class="emotion-12 emotion-13"
              >
                Houston Astros vs. Seattle Mariners 3 - popular
              </h1>
              <span
                class="emotion-14 emotion-15"
              >
                2 Aug 2020
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                Houston, US
              </span>
              <p
                class="emotion-18 emotion-19"
              >
                <span>
                  From
                </span>
                 $
                10
              </p>
              <button
                class="emotion-20 emotion-21"
              >
                Get Tickets
              </button>
            </div>
          </div>
          <div
            aria-label="card"
            class="emotion-24 emotion-25"
          >
            <img
              class="emotion-10 emotion-11"
              src="https://sportswhereiam.com/wp-content/uploads/2015/06/Minute-Maid-Park.jpg"
            />
            <div
              class="emotion-22 emotion-23"
            >
              <h1
                class="emotion-12 emotion-13"
              >
                Houston Astros vs. Seattle Mariners 4 - popular
              </h1>
              <span
                class="emotion-14 emotion-15"
              >
                2 Aug 2020
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                Houston, US
              </span>
              <p
                class="emotion-18 emotion-19"
              >
                <span>
                  From
                </span>
                 $
                10
              </p>
              <button
                class="emotion-20 emotion-21"
              >
                Get Tickets
              </button>
            </div>
          </div>
          <div
            aria-label="card"
            class="emotion-24 emotion-25"
          >
            <img
              class="emotion-10 emotion-11"
              src="https://sportswhereiam.com/wp-content/uploads/2015/06/Minute-Maid-Park.jpg"
            />
            <div
              class="emotion-22 emotion-23"
            >
              <h1
                class="emotion-12 emotion-13"
              >
                Houston Astros vs. Seattle Mariners 5 - popular
              </h1>
              <span
                class="emotion-14 emotion-15"
              >
                2 Aug 2020
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                Houston, US
              </span>
              <p
                class="emotion-18 emotion-19"
              >
                <span>
                  From
                </span>
                 $
                10
              </p>
              <button
                class="emotion-20 emotion-21"
              >
                Get Tickets
              </button>
            </div>
          </div>
          <div
            aria-label="card"
            class="emotion-24 emotion-25"
          >
            <img
              class="emotion-10 emotion-11"
              src="https://sportswhereiam.com/wp-content/uploads/2015/06/Minute-Maid-Park.jpg"
            />
            <div
              class="emotion-22 emotion-23"
            >
              <h1
                class="emotion-12 emotion-13"
              >
                Houston Astros vs. Seattle Mariners 6 - popular
              </h1>
              <span
                class="emotion-14 emotion-15"
              >
                2 Aug 2020
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                Houston, US
              </span>
              <p
                class="emotion-18 emotion-19"
              >
                <span>
                  From
                </span>
                 $
                10
              </p>
              <button
                class="emotion-20 emotion-21"
              >
                Get Tickets
              </button>
            </div>
          </div>
          <div
            aria-label="card"
            class="emotion-24 emotion-25"
          >
            <img
              class="emotion-10 emotion-11"
              src="https://sportswhereiam.com/wp-content/uploads/2015/06/Minute-Maid-Park.jpg"
            />
            <div
              class="emotion-22 emotion-23"
            >
              <h1
                class="emotion-12 emotion-13"
              >
                Houston Astros vs. Seattle Mariners 7 - popular
              </h1>
              <span
                class="emotion-14 emotion-15"
              >
                2 Aug 2020
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                Houston, US
              </span>
              <p
                class="emotion-18 emotion-19"
              >
                <span>
                  From
                </span>
                 $
                10
              </p>
              <button
                class="emotion-20 emotion-21"
              >
                Get Tickets
              </button>
            </div>
          </div>
          <div
            aria-label="card"
            class="emotion-24 emotion-25"
          >
            <img
              class="emotion-10 emotion-11"
              src="https://sportswhereiam.com/wp-content/uploads/2015/06/Minute-Maid-Park.jpg"
            />
            <div
              class="emotion-22 emotion-23"
            >
              <h1
                class="emotion-12 emotion-13"
              >
                Houston Astros vs. Seattle Mariners 8 - popular
              </h1>
              <span
                class="emotion-14 emotion-15"
              >
                2 Aug 2020
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                Houston, US
              </span>
              <p
                class="emotion-18 emotion-19"
              >
                <span>
                  From
                </span>
                 $
                10
              </p>
              <button
                class="emotion-20 emotion-21"
              >
                Get Tickets
              </button>
            </div>
          </div>
          <div
            aria-label="card"
            class="emotion-24 emotion-25"
          >
            <img
              class="emotion-10 emotion-11"
              src="https://sportswhereiam.com/wp-content/uploads/2015/06/Minute-Maid-Park.jpg"
            />
            <div
              class="emotion-22 emotion-23"
            >
              <h1
                class="emotion-12 emotion-13"
              >
                Houston Astros vs. Seattle Mariners 9 - popular
              </h1>
              <span
                class="emotion-14 emotion-15"
              >
                2 Aug 2020
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                Houston, US
              </span>
              <p
                class="emotion-18 emotion-19"
              >
                <span>
                  From
                </span>
                 $
                10
              </p>
              <button
                class="emotion-20 emotion-21"
              >
                Get Tickets
              </button>
            </div>
          </div>
          <div
            aria-label="card"
            class="emotion-24 emotion-25"
          >
            <img
              class="emotion-10 emotion-11"
              src="https://sportswhereiam.com/wp-content/uploads/2015/06/Minute-Maid-Park.jpg"
            />
            <div
              class="emotion-22 emotion-23"
            >
              <h1
                class="emotion-12 emotion-13"
              >
                Houston Astros vs. Seattle Mariners 10 - popular
              </h1>
              <span
                class="emotion-14 emotion-15"
              >
                2 Aug 2020
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                Houston, US
              </span>
              <p
                class="emotion-18 emotion-19"
              >
                <span>
                  From
                </span>
                 $
                10
              </p>
              <button
                class="emotion-20 emotion-21"
              >
                Get Tickets
              </button>
            </div>
          </div>
          <div
            aria-label="card"
            class="emotion-24 emotion-25"
          >
            <img
              class="emotion-10 emotion-11"
              src="https://sportswhereiam.com/wp-content/uploads/2015/06/Minute-Maid-Park.jpg"
            />
            <div
              class="emotion-22 emotion-23"
            >
              <h1
                class="emotion-12 emotion-13"
              >
                Houston Astros vs. Seattle Mariners 11 - popular
              </h1>
              <span
                class="emotion-14 emotion-15"
              >
                2 Aug 2020
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                Houston, US
              </span>
              <p
                class="emotion-18 emotion-19"
              >
                <span>
                  From
                </span>
                 $
                10
              </p>
              <button
                class="emotion-20 emotion-21"
              >
                Get Tickets
              </button>
            </div>
          </div>
          <div
            aria-label="card"
            class="emotion-24 emotion-25"
          >
            <img
              class="emotion-10 emotion-11"
              src="https://sportswhereiam.com/wp-content/uploads/2015/06/Minute-Maid-Park.jpg"
            />
            <div
              class="emotion-22 emotion-23"
            >
              <h1
                class="emotion-12 emotion-13"
              >
                Houston Astros vs. Seattle Mariners 12 - popular
              </h1>
              <span
                class="emotion-14 emotion-15"
              >
                2 Aug 2020
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                Houston, US
              </span>
              <p
                class="emotion-18 emotion-19"
              >
                <span>
                  From
                </span>
                 $
                10
              </p>
              <button
                class="emotion-20 emotion-21"
              >
                Get Tickets
              </button>
            </div>
          </div>
          <div
            aria-label="card"
            class="emotion-24 emotion-25"
          >
            <img
              class="emotion-10 emotion-11"
              src="https://sportswhereiam.com/wp-content/uploads/2015/06/Minute-Maid-Park.jpg"
            />
            <div
              class="emotion-22 emotion-23"
            >
              <h1
                class="emotion-12 emotion-13"
              >
                Houston Astros vs. Seattle Mariners 13 - popular
              </h1>
              <span
                class="emotion-14 emotion-15"
              >
                2 Aug 2020
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                Houston, US
              </span>
              <p
                class="emotion-18 emotion-19"
              >
                <span>
                  From
                </span>
                 $
                10
              </p>
              <button
                class="emotion-20 emotion-21"
              >
                Get Tickets
              </button>
            </div>
          </div>
          <div
            aria-label="card"
            class="emotion-24 emotion-25"
          >
            <img
              class="emotion-10 emotion-11"
              src="https://sportswhereiam.com/wp-content/uploads/2015/06/Minute-Maid-Park.jpg"
            />
            <div
              class="emotion-22 emotion-23"
            >
              <h1
                class="emotion-12 emotion-13"
              >
                Houston Astros vs. Seattle Mariners 14 - popular
              </h1>
              <span
                class="emotion-14 emotion-15"
              >
                2 Aug 2020
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                Houston, US
              </span>
              <p
                class="emotion-18 emotion-19"
              >
                <span>
                  From
                </span>
                 $
                10
              </p>
              <button
                class="emotion-20 emotion-21"
              >
                Get Tickets
              </button>
            </div>
          </div>
          <div
            aria-label="card"
            class="emotion-24 emotion-25"
          >
            <img
              class="emotion-10 emotion-11"
              src="https://sportswhereiam.com/wp-content/uploads/2015/06/Minute-Maid-Park.jpg"
            />
            <div
              class="emotion-22 emotion-23"
            >
              <h1
                class="emotion-12 emotion-13"
              >
                Houston Astros vs. Seattle Mariners 15 - popular
              </h1>
              <span
                class="emotion-14 emotion-15"
              >
                2 Aug 2020
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                Houston, US
              </span>
              <p
                class="emotion-18 emotion-19"
              >
                <span>
                  From
                </span>
                 $
                10
              </p>
              <button
                class="emotion-20 emotion-21"
              >
                Get Tickets
              </button>
            </div>
          </div>
          <div
            aria-label="card"
            class="emotion-24 emotion-25"
          >
            <img
              class="emotion-10 emotion-11"
              src="https://sportswhereiam.com/wp-content/uploads/2015/06/Minute-Maid-Park.jpg"
            />
            <div
              class="emotion-22 emotion-23"
            >
              <h1
                class="emotion-12 emotion-13"
              >
                Houston Astros vs. Seattle Mariners 16 - popular
              </h1>
              <span
                class="emotion-14 emotion-15"
              >
                2 Aug 2020
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                Houston, US
              </span>
              <p
                class="emotion-18 emotion-19"
              >
                <span>
                  From
                </span>
                 $
                10
              </p>
              <button
                class="emotion-20 emotion-21"
              >
                Get Tickets
              </button>
            </div>
          </div>
          <div
            aria-label="card"
            class="emotion-24 emotion-25"
          >
            <img
              class="emotion-10 emotion-11"
              src="https://sportswhereiam.com/wp-content/uploads/2015/06/Minute-Maid-Park.jpg"
            />
            <div
              class="emotion-22 emotion-23"
            >
              <h1
                class="emotion-12 emotion-13"
              >
                Houston Astros vs. Seattle Mariners 17 - popular
              </h1>
              <span
                class="emotion-14 emotion-15"
              >
                2 Aug 2020
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                Houston, US
              </span>
              <p
                class="emotion-18 emotion-19"
              >
                <span>
                  From
                </span>
                 $
                10
              </p>
              <button
                class="emotion-20 emotion-21"
              >
                Get Tickets
              </button>
            </div>
          </div>
          <div
            aria-label="card"
            class="emotion-24 emotion-25"
          >
            <img
              class="emotion-10 emotion-11"
              src="https://sportswhereiam.com/wp-content/uploads/2015/06/Minute-Maid-Park.jpg"
            />
            <div
              class="emotion-22 emotion-23"
            >
              <h1
                class="emotion-12 emotion-13"
              >
                Houston Astros vs. Seattle Mariners 18 - popular
              </h1>
              <span
                class="emotion-14 emotion-15"
              >
                2 Aug 2020
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                Houston, US
              </span>
              <p
                class="emotion-18 emotion-19"
              >
                <span>
                  From
                </span>
                 $
                10
              </p>
              <button
                class="emotion-20 emotion-21"
              >
                Get Tickets
              </button>
            </div>
          </div>
          <div
            aria-label="card"
            class="emotion-24 emotion-25"
          >
            <img
              class="emotion-10 emotion-11"
              src="https://sportswhereiam.com/wp-content/uploads/2015/06/Minute-Maid-Park.jpg"
            />
            <div
              class="emotion-22 emotion-23"
            >
              <h1
                class="emotion-12 emotion-13"
              >
                Houston Astros vs. Seattle Mariners 19 - popular
              </h1>
              <span
                class="emotion-14 emotion-15"
              >
                2 Aug 2020
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                Houston, US
              </span>
              <p
                class="emotion-18 emotion-19"
              >
                <span>
                  From
                </span>
                 $
                10
              </p>
              <button
                class="emotion-20 emotion-21"
              >
                Get Tickets
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-label="more tab data"
        class="emotion-336 emotion-337"
      >
        <p
          class="emotion-334 emotion-335"
        >
          More
        </p>
      </div>
    </div>
  </div>
</div>
`;
